k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argus-dev
  labels:
    name: argus-dev
    environment: development
